fix: :bug: Double scrolls

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -21,7 +21,7 @@
 // Overrides 
 
 
-body, main {
+main {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: $dark;
@@ -38,7 +38,7 @@ body, main {
   right: 0;
   padding:0;
   top: 0px;
-  overflow: scroll;
+  overflow-y: scroll;
   
   &.light {
     background-color: $light;
